# proj-spark-stream

./: README.md  pyproject.toml
docker/: docker-compose.yaml
python/: main.py  sparkmain.py
python/chk-point-dir/: .metadata.crc  metadata
python/chk-point-dir/offsets/: .0.crc  0
python/chk-point-dir/sources/0/: .0.crc  0
