[tool.poetry]
name = "proj-spark-stream"
version = "0.1.0"
description = ""
authors = ["LucasJFaust <lucasjfm.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
faker = "^25.8.0"
confluent-kafka = "^2.4.0"
simplejson = "^3.19.2"
spark = "^0.2.1"
cloudpickle = "^1.6.0"
pyspark = "3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
